[gd_scene load_steps=3 format=3 uid="uid://c1sdf7j53ekxs"]

[ext_resource type="PackedScene" uid="uid://tgh5senf6t6g" path="res://scenes/player/player.tscn" id="1_5fy81"]
[ext_resource type="Script" path="res://scenes/levels/level.gd" id="1_gawbi"]

[node name="Level" type="Node2D"]
script = ExtResource("1_gawbi")

[node name="Ground" type="Node2D" parent="."]

[node name="Projectiles" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("1_5fy81")]
position = Vector2(533, 527)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(0.6, 0.6)
position_smoothing_enabled = true
position_smoothing_speed = 4.0

[connection signal="grenade_thrown" from="Player" to="." method="_on_player_grenade_thrown"]
[connection signal="laser_shot" from="Player" to="." method="_on_player_laser_shot"]
